--- a/publishable/configs/forms/form1.php.example
+++ b/publishable/configs/forms/form1.php.example
@@ -15,6 +15,7 @@ return [
     ],
     "prepare" => function($data) {
         $data['name'] .= ' - prepared ';
+        $data['attachments'] = [ 'assets/images/image1.jpg', 'assets/images/image2.jpg' ]; //массив файлов для прикрепления к письму
         return $data;
     },
     "customValidator" => function($data) {
